--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,41 @@
 <div id="navbar">
-</div>
-
-<div id="navbar_spacer">
-  &nbsp;
+  <table id="button_panel"> 
+    <tr class="buttons" id="home">
+      <td class="button_transform">
+        <td class="text_display">
+          <h>Home</h>
+        </td>
+      </td>
+    </tr>
+    <tr class="buttons" id="about">
+      <td class="button_transform">
+        <td class="text_display">
+          <h>About</h>
+        </td>
+      </td>
+    </tr>
+    <tr class="buttons" id="skills">
+      <td class="button_transform">
+        <td class="text_display">
+          <h>Skills</h>
+        </td>
+      </td>
+    </tr>
+    <tr class="buttons" id="my_work">
+      <td class="button_transform">
+        <td class="text_display">
+          <h>My Work</h>
+        </td>
+      </td>
+    </tr>
+    <tr class="buttons" id="contact">
+      <td class="button_transform">
+        <td class="text_display">
+          <h>Contact</h>
+        </td>
+      </td>
+    </tr>
+  </table>
 </div>
 
 <div id="center_column">
@@ -32,7 +65,4 @@
     </div>
 
   </div>
-</div>
-
-<div id="footer">
 </div>
