--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,7 +38,7 @@
   </table>
 </div>
 
-<div id="center_column">
+<div id="center_column" class="container">
   <div id="center_column_spacer"></div>
   <div class="center_column_row">
 
