Change layout of work sample links

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,31 +38,7 @@
   </table>
 </div>
 
-<div id="center_column" class="container">
-  <div id="center_column_spacer"></div>
-  <div class="center_column_row">
-
-    <div class="center_column_img">
-      <%= image_tag "screen_cap6" %>
-    </div>
-    <div class="center_column_p">
-      <div class="inner_p_container">
-        <p>My goal was to make Fauxbook as simple as possible, while still evoking the experience of a social network. I started by defining the basic data models and their associations. While fairly simple, the resulting diagram helped me explore the problem space and spot possible roadblocks ahead of time.</p>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="center_column_row">
-
-    <div class="center_column_img">
-      <%= image_tag "screen_cap6" %>
-    </div>
-    <div class="center_column_p">
-      <div class="inner_p_container">
-        <p>My goal was to make Fauxbook as simple as possible, while still evoking the experience of a social network. I started by defining the basic data models and their associations. While fairly simple, the resulting diagram helped me explore the problem space and spot possible roadblocks ahead of time.</p>
-      </div>
-    </div>
-
-  </div>
+<div id="center_column">
+  <%= image_tag "screen_cap6", class: "samples", id: "sample1" %>
+  <%= image_tag "screen_cap6", class: "samples", id: "sample2" %>
 </div>
