--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,71 +19,27 @@ html, body {
 
 #center_column {
   position: relative;
-  top: 75px;
-  left: 93px;
-  height: 100%;
-  width: 942.25px;
-  padding: 46px 23px;
-  background-color: white;
-}
-
-#center_column:hover {
-  opacity:0.4; /* how much transparent you want image to be*/
-  filter:alpha(opacity=40); /* browser fix*/
-  -webkit-opacity:0.4; /*vendor prefixes for website browsers*/
-  -moz-opacity:0.4; /* same as above, edited thankx to @ Daniel_Lisik  */
-}
-
-#center_column_spacer {
-  height: 12px;
-}
-
-.center_column_row {
+  top: 74px;
   display: flex;
   flex-flow: row;
-  position: relative;
-  height: 254px;
-}
-
-.center_column_img {
-  order: 1;
+  align-items: flex-start;
   height: 100%;
-  width: 516px;
+  padding: 46px 23px;
+  background-color: white;
+  padding: 0;
 }
 
-.center_column_img img {
-  object-fit: cover;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  display: block;
-  height: 222.3px;
-  width: 468.35px;
-  margin: auto;
+.samples {
+  object-fit: contain;
+  width: 33%;
 }
 
-.center_column_p {
+#sample1 {
+  order: 1;
+}
+
+#sample2 {
   order: 2;
-  width: 426px;
-  height: 254.25px;
-}
-
-.inner_p_container {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 222.3px;
-  width: 383.4px;
-  margin: auto;
-  text-align: justify;
-  font-size: 18px;
-  line-height: 25px;
-}
-
-.inner_p_container p {
-  position: relative;
-  bottom: 7px;
-  margin-top: 0;
 }
 
 #navbar #button_panel {
