--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -39,6 +39,20 @@
 </div>
 
 <div id="center_column">
-  <%= image_tag "screen_cap6", class: "samples", id: "sample1" %>
-  <%= image_tag "screen_cap6", class: "samples", id: "sample2" %>
+  <div class="sample_containers">
+    <%= image_tag "screen_cap6", class: "samples", id: "sample1" %>
+    <div class="image_transform">
+      <div class="sample_description">
+        <p>This is a message</p>
+      </div>
+    </div>
+  </div>
+  <div class="sample_containers">
+    <%= image_tag "screen_cap6", class: "samples", id: "sample2" %>
+    <div class="image_transform">
+      <div class="sample_description">
+        <p>This is a message</p>
+      </div>
+    </div>
+  </div>
 </div>
