--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,9 +2,38 @@
 @import "bootstrap";
 
 html, body {
+  position: relative;
   width: 1370px;
   height: 100%;
-  background-color: green;
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 14px;
+  background-color: #3f3f3f;
+}
+
+#intro {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1, p {
+  letter-spacing: -1px;
+  text-align: center;
+}
+
+h1 {
+  font-family: Montserrat, Tahoma;
+  color: #cfcfcf;
+  font-size: 1.6em;
+  line-height: 36px;
+  font-weight: 700;
+}
+
+p {
+  font-size: 1.18em;
+  color: #7a7a7a;
 }
 
 #navbar {
@@ -33,6 +62,11 @@ html, body {
   width: 33%;
 }
 
+#sample_container1 {
+  background-color: #4267b2;
+  height: 254.17px;
+}
+
 .samples {
   width: 100%;
 }
@@ -40,7 +74,6 @@ html, body {
 .samples img {
   object-fit: contain;
 }
-
 
 #sample1 {
   order: 1;
