--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,58 +1,8 @@
-<div id="navbar">
-  <table id="button_panel"> 
-    <tr class="buttons" id="home">
-      <td class="button_transform">
-        <td class="text_display">
-          <h>Home</h>
-        </td>
-      </td>
-    </tr>
-    <tr class="buttons" id="about">
-      <td class="button_transform">
-        <td class="text_display">
-          <h>About</h>
-        </td>
-      </td>
-    </tr>
-    <tr class="buttons" id="skills">
-      <td class="button_transform">
-        <td class="text_display">
-          <h>Skills</h>
-        </td>
-      </td>
-    </tr>
-    <tr class="buttons" id="my_work">
-      <td class="button_transform">
-        <td class="text_display">
-          <h>My Work</h>
-        </td>
-      </td>
-    </tr>
-    <tr class="buttons" id="contact">
-      <td class="button_transform">
-        <td class="text_display">
-          <h>Contact</h>
-        </td>
-      </td>
-    </tr>
-  </table>
+<div class="page">
+  <div id="intro">
+    <h1>John Marks</h1>
+    <p>This is my page</p>
+  </div>
 </div>
 
-<div id="center_column">
-  <div class="sample_containers">
-    <%= image_tag "screen_cap6", class: "samples", id: "sample1" %>
-    <div class="image_transform">
-      <div class="sample_description">
-        <p>This is a message</p>
-      </div>
-    </div>
-  </div>
-  <div class="sample_containers">
-    <%= image_tag "screen_cap6", class: "samples", id: "sample2" %>
-    <div class="image_transform">
-      <div class="sample_description">
-        <p>This is a message</p>
-      </div>
-    </div>
-  </div>
-</div>
+<%= image_tag "me", id: "me" %>
