--- a/app/assets/stylesheets/selfie_transform.css
+++ b/app/assets/stylesheets/selfie_transform.css
@@ -8,12 +8,26 @@
   background-color: white;
   padding: 10.5px;
   padding-top: 13.5px;
-  padding-bottom: 48.75px;
+  padding-bottom: 0;
   -webkit-transform: rotate(2deg);
   -moz-transform: rotate(2deg);
   -webkit-transition: -webkit-transform .15s linear;
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
   -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+}
+
+#selfie img {
+  position: relative;
+  right: 11px;
+  bottom: 14px;
+  object-fit: cover;
+  box-sizing: content-box;
+  height: 175.5px;
+  width: 225px;
+  background-color: white;
+  padding: 10.5px;
+  padding-top: 13.5px;
+  padding-bottom: 0;
 }
 
 #selfie:hover {
@@ -24,13 +38,11 @@
 }
 
 #selfie:hover + #selfie_caption {
-  transform: translateY(20px);
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  -webkit-transform: translateY(20px);
-  -o-transform: translateY(20px);
-  -moz-transform: translateY(20px);
-  transition: all 2s ease-in-out;
+  transform: scale(1.251, 1.179) translate(3px, 24.3px);
+  -webkit-transform: scale(1.251, 1.179) translate(3px, 24.3px);
+  -o-transform: scale(1.251, 1.179) translate(3px, 24.3px);
+  -moz-transform: scale(1.251, 1.179) translate(3px, 24.3px);
+  transition: all .15s ease-in-out;
   -webkit-transition: -webkit-transform .15s linear;
   -moz-transition: all .15s ease-in-out;
   -o-transition: all .15s ease-in-out;
@@ -38,16 +50,25 @@
 }
 
 #selfie_caption {
+  text-decoration: none !important;
   position: absolute;
-  top: 233.75px;
-  right: 102.5px;
+  top: 223px;
+  right: 42.5px;
   font-family: "Permanent Marker";
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
   line-height: 20px;
   font-size: 20px;
+  width: 245.5px;
   color: black;
   -webkit-transform: rotate(2deg);
   -moz-transform: rotate(2deg);
+  transition: all .15s ease-in-out;
+  -webkit-transition: -webkit-transform .15s linear;
+  -moz-transition: all .15s ease-in-out;
+  -o-transition: all .15s ease-in-out;
+  padding: 16.25px;
+  background-color: white;
+  text-align: center;
 }
