--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Portfolio</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'reset', 'application', 'button_transform', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'reset', 'application', 'button_transform', 'selfie_transform', '//fonts.googleapis.com/css?family=Permanent+Marker', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
