--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,4 +5,5 @@
   </div>
 </div>
 
-<%= image_tag "me", id: "me" %>
+<%= link_to image_tag("me"), projects_path, id: "selfie" %>
+<%= link_to "See My Projects", projects_path, id: "selfie_caption" %>
