--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<div id="landing" class="navbar">
+  <%= render "navbar" %>
+</div>
+
 <div class="page">
   <div id="intro">
     <h1>John Marks</h1>
