Tweak animation on landing page buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,3 +188,15 @@ p {
 #landing.navbar #contact {
   top: 219px;
 }
+
+#contact_me {
+  width: 131px;
+  height: 33.4px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 3.5px;
+  font-size: 11px;
+  color: #f65026;
+  border: thin solid #f65026;
+  border-radius: 3px;
+}
