--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,7 @@
   <div id="intro">
     <h1>John Marks</h1>
     <p>This is my page</p>
+    <div id="contact_me">CONTACT ME</div>
   </div>
 </div>
 
