--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -35,3 +35,10 @@
     </td>
   </tr>
 </table>
+
+<ul>
+  <li id="twitter"></li>
+  <li id="linkedin"></li>
+  <li id="facebook"></li>
+  <li id="rss"></li>
+</ul>
