--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@ html, body {
   font-weight: 400;
   font-size: 14px;
   background-color: #3f3f3f;
+  overflow: hidden;
 }
 
 #intro {
@@ -56,38 +57,43 @@ p {
 
 #center_column {
   position: relative;
-  top: 74px;
+  left: 60px;
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
   align-items: flex-start;
   height: 100%;
   padding: 46px 23px;
-  background-color: white;
   padding: 0;
 }
 
 .sample_containers {
-  width: 33%;
+  width: 33.3333%;
+  height: 33.3333%
+}
+
+.sample_containers img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #sample_container1 {
   background-color: #4267b2;
-  height: 254.17px;
 }
 
-.samples {
-  width: 100%;
-}
-
-.samples img {
-  object-fit: contain;
-}
-
-#sample1 {
+#sample_container1 img {
   order: 1;
+  background-color: #4267b2;
+  object-fit: contain;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  margin-left: -150.69px !important;
+  width: 301.38666px;
+  margin: 0 auto;
 }
 
-#sample2 {
+#sample_container2 img {
   order: 2;
 }
 
