--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <div id="landing" class="navbar">
+      <%= render "navbar" %>
+    </div>
     <%= yield %>
   </body>
 </html>
