--- a/app/views/static_pages/my_work.html.erb
+++ b/app/views/static_pages/my_work.html.erb
@@ -1,3 +1,7 @@
+<div id="landing" class="navbar">
+  <%= render "navbar" %>
+</div>
+
 <div id="center_column">
   <div class="sample_containers" id="sample_container1">
     <%= link_to image_tag("logo"), "http://arcane-stream-86572.herokuapp.com/" %>
