--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,3 +1,7 @@
+<div id="logo_container">
+  <div id="logo"></div>
+</div>
+
 <table id="button_panel"> 
   <%= content_tag(:tr, class: "buttons", id: on_page("home")) do -%>
     <td class="button_transform">
