Add text box on hover of samples

--- a/app/assets/stylesheets/button_transform.css
+++ b/app/assets/stylesheets/button_transform.css
@@ -1,4 +1,4 @@
-.text_display, .sample_description {
+.text_display {
   font-size: 11px;
   letter-spacing: 1.25px;
   font-family: Montserrat, Tahoma;       
@@ -6,7 +6,7 @@
   text-align: center;      
 }
 
-.buttons:hover .text_display, .sample_containers:hover .sample_description {
+.buttons:hover .text_display {
   display: block;
   position: relative;
   text-decoration: none;
@@ -38,44 +38,7 @@
   background-image: url("contact green.png");
 }
 
-/*------------- general navbar only -------------*/
-
-#general.navbar .button_transform {
-  transition-duration: 0.5s;            
-  -webkit-transition-duration: 0.5s; 
-  -moz-transition-duration: 0.5s;    
-  -o-transition-duration: 0.5s;
-  overflow: hidden;
-  height: 0px;
-}
-
-#general.navbar .buttons:hover .button_transform {
-  height: 50px;
-}
-
-#general.navbar .text_display, .sample_description {
-  display: none;
-  transform-origin: top !important;               
-  transition-duration: 0.5s;               
-  -webkit-transform-origin: top;       
-  -webkit-transition-duration: 0.5s;   
-  -moz-transform-origin: top;        
-  -moz-transition-duration: 0.5s;       
-  -o-transform-origin: top;    
-  -o-transition-duration: 0.5s;
-  font-size: 16px;
-}
-
-#general.navbar .buttons:hover .text_display {
-  display: block;
-  bottom: 50px;
-  height: 74px;
-  width: 75px;
-}
-
-/*------------- landing navbar only -------------*/
-
-#landing.navbar .buttons:hover .text_display, .text_display:hover {
+.navbar .buttons:hover .text_display, .text_display:hover {
   background-color: #181818;
   -webkit-transition: background-color 100ms linear, opacity 1s linear;
   -ms-transition: background-color 100ms linear, opacity 1s linear;
@@ -85,13 +48,13 @@
   opacity: 1;
 }
 
-#landing.navbar .text_display {
+.navbar .text_display {
   opacity: 0;
   width: 59px;
   height: 51px;
   line-height: 51px !important;
 }
 
-#landing.navbar .text_display h {
+.navbar .text_display h {
   line-height: 51px !important;
 }
