--- a/app/assets/stylesheets/sample_transform.css
+++ b/app/assets/stylesheets/sample_transform.css
@@ -49,7 +49,7 @@
   text-decoration: none;
   text-align: center;
   line-height: 0px;
-  -webkit-transition: all .1s ease-in-out; /* Safari */
+  -webkit-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
 }
 
