--- a/app/views/static_pages/my_work.html.erb
+++ b/app/views/static_pages/my_work.html.erb
@@ -4,7 +4,7 @@
 
 <div id="center_column">
   <div class="sample_containers" id="sample_container1">
-    <%= link_to image_tag("logo"), "http://arcane-stream-86572.herokuapp.com/" %>
+    <%= link_to image_tag("ruby_on_rails"), "http://arcane-stream-86572.herokuapp.com/" %>
     <%= link_to "http://arcane-stream-86572.herokuapp.com/", class: "sample_description" do %>
       <div class="sample_description"></div>
       <%= link_to "http://arcane-stream-86572.herokuapp.com/", class: "sample_text" do %>
@@ -14,7 +14,7 @@
     <% end %>
   </div>
   <div class="sample_containers" id="sample_container2">
-    <%= link_to image_tag("chess1"), "https://github.com/johnjmarks4/chess" %>
+    <%= link_to image_tag("object-oriented_programming"), "https://github.com/johnjmarks4/chess" %>
     <%= link_to "https://github.com/johnjmarks4/chess", class: "sample_description" do %>
       <div class="sample_description"></div>
       <%= link_to  "https://github.com/johnjmarks4/chess", class: "sample_text" do %>
